# xwars

./: .gdb_history  .gitignore  CMakeLists.txt  GPATH  GRTAGS  GTAGS  README.md  compile_commands.json  dependencies.txt  tags
arena/: ArenaTerminal.cpp  ArenaTerminal.hpp  CMakeLists.txt  Common.hpp  MainApp.cpp  MainApp.hpp  MainWindow.cpp  MemoryGrid.cpp  MemoryGrid.hpp  MiddlePanel.cpp  XBot.cpp  XBot.hpp  XWar.cpp  XWar.hpp
arena/Utils/: Singleton.hpp
backup/: test.asm
bots/: amun.asm  amun.bot  deut.asm  deut.bot  deut2.asm  deut2.bot  deut3.asm  deut3.bot  kamikaze.asm  kamikaze.bot  sigma.asm  test.asm  test.bot  test2.asm  test2.bot  x3ero0.asm  x3ero0.bot  x3ero02.asm  x3ero02.bot
common/: bitmap.c  bitmap.h  const.h  loader.c  loader.h  sections.c  sections.h  segfault.c  signals.c  signals.h  symbols.c  symbols.h
configs/: 1280_720.xml  1920_1080.xml
game/: .#RegisterDisplay.cpp  Arena.cpp  Arena.hpp  BotInfo.cpp  BotInfo.hpp  BotNameDisplay.cpp  BotNameDisplay.hpp  CMakeLists.txt  Common.cpp  Common.hpp  Factory.cpp  Factory.hpp  GPATH  GRTAGS  GTAGS  InstructionDisplay.cpp  InstructionDisplay.hpp  MainApp.cpp  MainApp.hpp  MainWindow.cpp  MainWindow.hpp  MemoryGrid.cpp  MemoryGrid.hpp  MiddlePanel.cpp  MiddlePanel.hpp  Property.cpp  Property.hpp  PropertyData.cpp  PropertyData.hpp  PropertyDataWidgets.cpp  PropertyDataWidgets.hpp  PropertyDisplay.cpp  PropertyDisplay.hpp  Register.cpp  Register.hpp  RegisterDisplay.cpp  RegisterDisplay.hpp  SettingsDialog.cpp  SettingsDialog.hpp  StatsDisplay.cpp  (+5 more)
pygui/: fetch_data.py  gui.py  run.sh
xasm/: disasm.c  parse.c  xasm.c  xasm.h  xasm_functions.c  xdis.c  xinfo.c
xlib/: const.asm  stdio.asm  string.asm
xvm/: cpu.c  cpu.h  execute.c  syscall.c  xvm.c
xwars/: bot.c  xwars.c  xwars.h
